clusters/xs4/kube/dashboard/draw.io/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: drawio-service
  namespace: drawio
  labels:
    app: draw.io
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: draw.io
